fix: added some validation to the form for create a policy

--- a/clientApp/src/app/app.component.html
+++ b/clientApp/src/app/app.component.html
@@ -6,7 +6,7 @@
     </div>
     <div class="col-12 col-lg-4 app__sidebar-container container-card" [class.open]="sidebarOpened">
       <ul>
-        <li routerLink="policies" routerLinkActive="active">
+        <li routerLink="policies" routerLinkActive="active" (click)="sidebarOpened = false;">
           Polizas de seguros
         </li>
       </ul>
